Use SVG for Logo

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -5,7 +5,7 @@
   flex-basis: 0;
   flex-grow: 1;
   font-size: rem($ratio-text-tiny);
-  line-height: ($line-height-logo / $r);
+  line-height: (1 / $r);
   text-transform: uppercase;
 
   ul {
@@ -37,7 +37,7 @@
   @media (min-width: $breakpoint-content) {
     $r: $ratio-text-small;
     font-size: rem($r);
-    line-height: ($line-height-logo / $r);
+    line-height: (1 / $r);
 
     li {
       margin-left: $width-gap;
