--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -69,7 +69,7 @@ $width-border-table: $width-border-small;
 
 
 // Global Header
-$height-logo: rem($ratio-text-logo * $line-height-logo);
+$height-logo: rem($ratio-text-logo);
 
 
 // Content
