--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,6 +1,6 @@
 <header class="global-header{{#home}} at-home{{/home}}" role="banner">
-  {{#home}}<h1 class="logo at-home"><mark>{{site_title}}</mark></h1>{{/home}}
-  {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
+  {{#home}}<h1 class="logo at-home"><mark><img alt="{{site_title}}" src="{{logo}}"></mark></h1>{{/home}}
+  {{^home}}<h1 class="logo"><a href="/"><img alt="{{site_title}}" src="{{logo}}"></a></h1>{{/home}}
 
   <nav class="site-navigation{{#home}} at-home{{/home}}">
     <ul>
