--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -3,7 +3,7 @@
   color: $color-dark-light;
   font-size: rem($ratio-text-logo);
   height: $height-logo;
-  line-height: $line-height-logo;
+  line-height: 1;
   margin-bottom: 0;
   margin-top: 0;
   text-transform: uppercase;
@@ -15,6 +15,11 @@
   mark {
     background-color: transparent;
     font-weight: bolder;
+  }
+
+  img {
+    height: 1rem;
+    width: auto;
   }
 
   @media (min-width: $breakpoint-full) {
