--- a/src/css/function/_pow.scss
+++ b/src/css/function/_pow.scss
@@ -1,14 +1,9 @@
-// pow() - Raise number to the nth power.
-//
-// @param {number} $base     Base number
-// @param {number} $exponent Exponent
-// @returns {number}
-@function pow($base, $exponent) {
-  $raised: 1;
+@function pow($b, $e) {
+  $r: 1;
 
-  @for $i from 1 through $exponent {
-    $raised: $raised * $base;
+  @for $i from 1 through $e {
+    $r: $r * $b;
   }
 
-  @return $raised;
+  @return $r;
 }
