--- a/src/css/function/_rem.scss
+++ b/src/css/function/_rem.scss
@@ -1,9 +1,5 @@
-// rem() - Convert unitless number to an rem.
-//
-// @param {number} $number Unitless number
-// @return {number}
-@function rem($number) {
-  $number: ($number * 1rem);
+@function rem($i) {
+  $i: ($i * 1rem);
 
-  @return $number;
+  @return $i;
 }
