--- a/src/css/function/_encode-color.scss
+++ b/src/css/function/_encode-color.scss
@@ -1,21 +1,13 @@
-// encode-color() - Encode color by percent encoding
-//
-// @param {color} $color Color that you want to encode
-// @return {string}
-//
-// TODO: return color instead of string.
-@function encode-color($color) {
-  $str_color: "" + $color;
+@function encode-color($c) {
+  $r: "" + $c;
 
-  // if $color is #ffffff
-  @if (str-index($str_color, "#") == 1) {
-    $str_color: "%23" + str-slice($str_color, 2);
+  @if (str-index($r, "#") == 1) {
+    $r: "%23" + str-slice($r, 2);
   }
 
-  // if $color is rgba(255, 255, 255, 1)
-  @if (str-index($str_color, "rgba") == 1) {
-    $str_color: "rgba(" + red($color) + "%2C" + green($color) + "%2C" + blue($color) + "%2C" + alpha($color) + ")";
+  @if (str-index($r, "rgba") == 1) {
+    $r: "rgba(" + red($c) + "%2C" + green($c) + "%2C" + blue($c) + "%2C" + alpha($c) + ")";
   }
 
-  @return $str_color;
+  @return $r;
 }
