Use em unit for sizing text

--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -4,6 +4,6 @@
   @extend %indistinguishable-link;
   @extend %positioning-root;
 
-  font-size: rem($ratio-text-global-footer);
+  font-size: em($ratio-text-global-footer);
   margin-bottom: $margin-large;
 }
