--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -2,18 +2,18 @@
 .first-heading {
   $r: $ratio-text-large;
 
-  font-size: rem($r);
+  font-size: em($r);
   line-height: $line-height-first-heading;
   margin-bottom: ($margin * $r);
   margin-top: ($margin-top-h1 + $height-site-navigation);
 
   @media (min-width: $breakpoint-content) {
-    font-size: rem($ratio-text-first-heading-content);
+    font-size: em($ratio-text-first-heading-content);
     margin-top: $margin-top-h1;
   }
 
   @media (min-width: $breakpoint-full) {
-    font-size: rem($ratio-text-first-heading-full);
+    font-size: em($ratio-text-first-heading-full);
     margin-left: (- ($width-supplement + $width-gap));
   }
 }
