--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,7 +1,7 @@
 // Logo
 .logo {
   color: $color-dark-light;
-  font-size: rem($ratio-text-logo);
+  font-size: em($ratio-text-logo);
   height: $height-logo;
   line-height: 1;
   margin-bottom: 0;
