--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -4,7 +4,7 @@
 
   flex-basis: 0;
   flex-grow: 1;
-  font-size: rem($ratio-text-tiny);
+  font-size: em($ratio-text-tiny);
   line-height: (1 / $r);
   text-transform: uppercase;
 
@@ -36,7 +36,7 @@
 
   @media (min-width: $breakpoint-content) {
     $r: $ratio-text-small;
-    font-size: rem($r);
+    font-size: em($r);
     line-height: (1 / $r);
 
     li {
