--- a/src/css/widget/_sidenote.scss
+++ b/src/css/widget/_sidenote.scss
@@ -5,7 +5,7 @@
   $r: $ratio-text-small;
 
   color: $color-dark-light;
-  font-size: rem($r);
+  font-size: em($r);
   line-height: ($line-height-root * 3 / 4 / $r);
 
   @media (min-width: $breakpoint-full) {
