--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -156,7 +156,7 @@ body::after {
 
   li {
     display: block;
-    height: rem($line-height * 1.5);
+    height: rem($line-height);
     overflow: hidden;
     width: calc((100% / 6) - #{$width-gap-small});
 
