Layout Global Footer with Flexbox

--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -4,6 +4,7 @@
   @extend %indistinguishable-link;
   @extend %positioning-root;
 
+  display: flex;
   font-size: em($ratio-text-global-footer);
-  margin-bottom: $margin-large;
+  margin-bottom: ($margin-large - $margin);
 }
