--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -3,6 +3,7 @@
   @extend %decorative-border;
 
   color: $color-dark-light;
+  flex-grow: 1;
 
   @media (min-width: $breakpoint-full) {
     margin-left: (- ($width-supplement + $width-gap));
