--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -1,15 +1,9 @@
 // Footlinks
 .footlinks {
   color: $color-dark-light;
-  margin-top: (- (rem($ratio-text-global-footer * $line-height-root) + $margin));
-  text-align: right;
+  margin-top: $margin;
 
   @media (min-width: $breakpoint-content) {
     margin-right: ($width-gap + $width-supplement);
-    margin-top: (- (rem($ratio-text-global-footer * $line-height-root-content) + $margin));
-  }
-
-  @media (min-width: $breakpoint-full) {
-    text-align: left;
   }
 }
