--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -39,10 +39,9 @@
   }
 
   @media (min-width: $breakpoint-content) {
-    margin-bottom: 0;
     position: absolute;
     right: $width-gap-small;
-    top: ((rem($line-height-root-content * $ratio-text-global-footer) - $height-site-search-query) / 2);
+    top: ((rem($line-height-root-content * $ratio-text-global-footer) - $height-site-search-query) / 2 + $margin);
     width: $width-supplement;
     z-index: 1;
   }
