Fix Post List info text- size

--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -17,7 +17,7 @@
 
   .info {
     color: $color-dark-light;
-    font-size: em($r-info);
+    font-size: em($r-info / $r);
   }
 
   @media (min-width: $breakpoint-content) {
