Revert "Use em unit for sizing text"
This reverts commit c76963b79e3d694415b48bc1aa25facad7f95512.

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -21,7 +21,7 @@ body {
 h1 {
   @extend %indistinguishable-link;
 
-  font-size: em($ratio-text-huge);
+  font-size: rem($ratio-text-huge);
   font-weight: normal;
   line-height: $line-height-tiny;
   margin: $margin-top-h1 0 $margin;
@@ -39,7 +39,7 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-dark-light;
-  font-size: em($ratio-text-huge);
+  font-size: rem($ratio-text-huge);
   height: 1em;
   line-height: 1;
   margin: $margin-large 0;
@@ -57,7 +57,7 @@ pre {
   clear: both;
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
-  font-size: em($r);
+  font-size: rem($r);
   line-height: ($line-height-root * 2 / 3 / $r);
   overflow: auto;
 
