--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -5,6 +5,6 @@
   @extend %positioning-root;
 
   display: flex;
-  font-size: em($ratio-text-global-footer);
+  font-size: rem($ratio-text-global-footer);
   margin-bottom: ($margin-large - $margin);
 }
