--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -3,7 +3,7 @@
   @extend %indistinguishable-link;
 
   float: left;
-  font-size: em($ratio-text-small);
+  font-size: rem($ratio-text-small);
   width: 100%;
 
   p {
