--- a/src/css/content/_section.scss
+++ b/src/css/content/_section.scss
@@ -3,7 +3,7 @@
   @extend %positioning-root;
 
   section h1 {
-    font-size: em($ratio-text-large);
+    font-size: rem($ratio-text-large);
     font-weight: bolder;
     margin-top: $margin-huge;
   }
