--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -124,7 +124,7 @@ body::after {
 .version {
   background-color: transparent;
   color: $color-secondary-dark;
-  font-size: em($ratio-text);
+  font-size: rem($ratio-text);
   vertical-align: top;
 }
 
