--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -2,6 +2,7 @@
 .logo {
   color: $color-dark-light;
   font-size: em($ratio-text-logo);
+  font-size: rem($ratio-text-logo);
   flex-basis: 0;
   flex-grow: 1;
   height: $height-logo;
