--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -2,7 +2,9 @@
 .site-navigation {
   $r: $ratio-text-tiny;
 
-  font-size: em($ratio-text-tiny);
+  flex-basis: 0;
+  flex-grow: 1;
+  font-size: rem($ratio-text-tiny);
   line-height: (1 / $r);
   text-transform: uppercase;
 
@@ -30,7 +32,7 @@
   @media (min-width: $breakpoint-content) {
     $r: $ratio-text-small;
 
-    font-size: em($r);
+    font-size: rem($r);
     line-height: (1 / $r);
 
     li {
