--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -9,7 +9,7 @@
   padding-left: 0;
 
   li {
-    font-size: em($r);
+    font-size: rem($r);
     line-height: $lh;
     list-style-type: none;
     margin-bottom: $margin;
@@ -17,7 +17,7 @@
 
   .info {
     color: $color-dark-light;
-    font-size: em($r-info / $r);
+    font-size: rem($r-info);
   }
 
   @media (min-width: $breakpoint-content) {
