--- a/src/css/widget/_topic.scss
+++ b/src/css/widget/_topic.scss
@@ -14,7 +14,7 @@
     color: $color-dark-light;
     content: "〰〰〰";
     display: block;
-    font-size: em($ratio-text-huge);
+    font-size: rem($ratio-text-huge);
     margin: $margin-large 0;
     text-align: center;
   }
