--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -5,7 +5,7 @@
   font-size: rem($r);
   line-height: $line-height-first-heading;
   margin-bottom: ($margin * $r);
-  margin-top: ($margin-top-h1 + $height-site-navigation);
+  margin-top: ($margin-top-h1 + $height-section-footer);
 
   @media (min-width: $breakpoint-content) {
     font-size: rem($ratio-text-first-heading-content);
