--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -3,7 +3,7 @@
   @extend %indistinguishable-link;
 
   float: left;
-  font-size: rem($ratio-text-small);
+  font-size: rem($ratio-text-section-footer);
   width: 100%;
 
   p {
@@ -14,11 +14,11 @@
     float: right;
     margin-left: $width-gap;
     position: relative;
-    top: (($height-first-heading-content - $height-site-navigation) / 2);
+    top: (($height-first-heading-content - $height-section-footer-content) / 2);
     width: auto;
   }
 
   @media (min-width: $breakpoint-full) {
-    top: (($height-first-heading-full - $height-site-navigation) / 2);
+    top: (($height-first-heading-full - $height-section-footer-content) / 2);
   }
 }
