--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -73,7 +73,8 @@ $height-logo: rem($ratio-text-logo);
 
 
 // Content
-$height-site-navigation: rem($ratio-text-site-navigation * $line-height-root-content);
+$height-section-footer: rem($line-height-root * $ratio-text-section-footer);
+$height-section-footer-content: rem($line-height-root-content * $ratio-text-section-footer);
 
 $height-first-heading-content: rem($line-height-first-heading * $ratio-text-first-heading-content);
 $height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-heading-full);
