--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -4,7 +4,7 @@
 
   flex-basis: 0;
   flex-grow: 1;
-  font-size: rem($ratio-text-tiny);
+  font-size: rem($r);
   line-height: (1 / $r);
   text-transform: uppercase;
 
