Limit Float height

--- a/src/css/widget/_float.scss
+++ b/src/css/widget/_float.scss
@@ -3,5 +3,17 @@
   float: right;
   margin-bottom: $margin-minimal;
   margin-left: $width-gap-small;
-  max-width: percentage(1 / pow($ratio, 2));
+
+  img {
+    display: block;
+    max-height: rem($line-height-root * 12);
+    max-width: ($width-content / pow($ratio, 2));
+    width: auto;
+  }
+
+  @media (min-width: $breakpoint-content) {
+    img {
+      max-height: rem($line-height-root-content* 12);
+    }
+  }
 }
