Sizing all based on default margin

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -11,17 +11,17 @@ $margin-maximal: ($margin * pow($ratio, 5));
 
 
 // Indent
-$indent: rem($ratio);
+$indent: $margin;
 
 
 // Border
-$width-border: .125rem;
+$width-border: ($margin-minimal / 3);
 $width-border-small: ($width-border / 2);
 $width-border-large: ($width-border * 2);
 
 
 // Padding
-$padding: .25rem;
+$padding: $margin-minimal;
 $padding-small: ($padding / 2);
 $padding-large: ($padding * 2);
 $padding-huge: ($padding * 3);
@@ -40,7 +40,7 @@ $width-gap-small: ($width-gap / 2);
 $width-content: $column;
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
 
-$width-supplement: ($width-content / $ratio-content * $ratio-supplement);
+$width-supplement: ($width-content / pow($ratio, 2));
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
 
 $width-full: ($width-supplement + $width-gap + $width-content);
