Revert "Use SVG for Logo"
This reverts commit 4860872cd681a48ddac7d8d8eaa678740917687b.

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -30,6 +30,7 @@ $line-height-root-content: $line-height;
 
 // Global Header
 $ratio-text-logo: $ratio-text;
+$line-height-logo: $line-height-large;
 
 
 // Content
