--- a/src/css/widget/_share-buttons.scss
+++ b/src/css/widget/_share-buttons.scss
@@ -3,21 +3,34 @@
   @extend %indistinguishable-link;
   @extend %protrusion;
 
+  $m: $width-gap-small;
+
   ul {
     display: flex;
     padding-left: 0;
+
+    &::before {
+      content: "Share on:";
+      display: block;
+      margin-right: $m;
+    }
   }
 
   li {
     display: block;
-    margin-right: $width-gap-small;
+    margin-right: $m;
   }
 
   @media (min-width: $breakpoint-full) {
     bottom: 0;
 
     ul {
+      flex-wrap: wrap;
       margin-bottom: 0;
+
+      &::before {
+        width: 100%;
+      }
     }
   }
 }
