Highlight with border instead of outline

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -20,6 +20,11 @@
     color: $color-dark;
     padding: 0 $height-site-search-query 0 $padding;
     width: 100%;
+
+    &:focus {
+      border-color: $color-primary;
+      outline: none;
+    }
   }
 
   .button {
