Removing implicit roles

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -5,7 +5,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content" role="main">
+    <main class="content">
       <section id="website" class="section">
         <h1 class="first-heading">{{short_title}}</h1>
 
