--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -8,7 +8,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content" role="main">
+    <main class="content">
       <?$categories::is_category_page eq="1">
         <section class="section">
           <h1 class="first-heading">{{short_title}}</h1>
