--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -5,7 +5,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content" role="main">
+    <main class="content">
       {{#articles}}
         {{#first}}
           <section id="latest-article" class="section topic">
