--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,4 +1,4 @@
-<header class="global-header{{#home}} at-home{{/home}}" role="banner">
+<header class="global-header{{#home}} at-home{{/home}}">
   {{#home}}<h1 class="logo at-home"><mark>{{site_title}}</mark></h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
