Give up to use Noto Sans Japanese

--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -1,6 +1,6 @@
 // Sans-Serif
 $font-stack-sans-serif-local: -apple-system, "Segoe UI", sans-serif;
-$font-stack-sans-serif: "Noto Sans Japanese", $font-stack-sans-serif-local;
+$font-stack-sans-serif: $font-stack-sans-serif-local;
 
 // Monospace
 $font-stack-monospace-local: "Menlo", "Consolas", monospace;
