Separate section with minimal crosses

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -39,14 +39,14 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-dark-light;
-  font-size: rem($ratio-text-huge);
+  font-size: rem($ratio-text-tiny);
   height: 1em;
   line-height: 1;
   margin: $margin-large 0;
   text-align: center;
 
   &::before {
-    content: "* * *";
+    content: "✖ ✖ ✖";
   }
 }
 
