No need to talk about listing

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -9,7 +9,7 @@
       <section class="section">
         <h1 class="first-heading">{{short_title}}</h1>
 
-        <p>2002年よりウェブログを始めました。当初よりウェブサイト制作に関する話題が中心になっていますが、なるべく日々の行動とその結果についての考察を連続して記録することを心がけています。2500記事以上になるそれらをここに時系列順で並べました。</p>
+        <p>それまでの日記を捨て、2002年よりウェブログを始めました。当初よりウェブサイト制作に関する話題が中心になっていますが、なるべく日々の行動とその結果についての考察を連続して記録することを心がけています。</p>
       </section>
 
       <section id="by-year" class="section">
