--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -9,7 +9,7 @@
       <section class="section">
         <h1 class="first-heading">{{short_title}}</h1>
 
-        <p>2003年ごろより、独立した形で参照してもらいたい文書やチュートリアルを書き、公開しています。他に翻訳や様々なデータの表なども作成しています。以下はそれらの一覧になります。</p>
+        <p>2003年ごろより、独立した形で参照してもらいたい文書やチュートリアルを書き、公開しています。他に翻訳や様々なデータの表なども作成しています。</p>
       </section>
 
       <section id="on-2015" class="section">
