Draw quote line out of content on medium screen

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -81,6 +81,10 @@ blockquote {
   > :last-child {
     margin-bottom: 0;
   }
+
+  @media (min-width: $breakpoint-content) {
+    margin-left: $margin-left-blockquote-content;
+  }
 }
 
 ul,
@@ -133,6 +137,12 @@ figcaption {
 
     &::before {
       content: initial;
+    }
+  }
+
+  @media (min-width: $breakpoint-content) {
+    blockquote + & {
+      margin-left: $margin-left-blockquote-content;
     }
   }
 
