--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -62,6 +62,7 @@ $margin-top-h1: $margin-gargantuan;
 
 $padding-left-blockquote: $width-gap;
 $width-border-blockquote: $width-border-large;
+$margin-left-blockquote-content: (- ($padding-left-blockquote + $width-border-blockquote));
 
 $padding-left-list: $indent;
 
