Fill the "Fill"

--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -16,21 +16,12 @@
     margin-left: (- $m);
   }
 
-  @media (min-width: $breakpoint-content) {
-    margin-left: 0;
-    margin-right: 0;
-
-    figcaption {
-      margin-left: 0;
-    }
-  }
-
   @media (min-width: $breakpoint-full) {
-    margin-left: (- ($width-supplement + $width-gap));
+    margin-left: (- ($width-gap-small + $width-supplement + $width-gap));
 
     figcaption {
       bottom: auto;
-      left: 0;
+      left: (- $width-gap-small);
       margin-top: $margin;
       text-align: left;
     }
