--- a/src/css/content/_section.scss
+++ b/src/css/content/_section.scss
@@ -6,5 +6,6 @@
     font-size: rem($ratio-text-large);
     font-weight: bolder;
     margin-top: $margin-huge;
+    margin-bottom: $margin-minimal;
   }
 }
