--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -69,7 +69,10 @@
           <h1>ウェブサイト上で使っているツール</h1>
 
           <ul class="flat">
+            <li><a href="https://github.com/hail2u/abbread">Abbread</a></li>
+            <li><a href="https://gist.github.com/hail2u/c86ee1467cd132b1c011">ellipsis-title.js</a></li>
             <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
+            <li><a href="https://gist.github.com/hail2u/c0d669fb8473bc9c80232be40d8d5e7f">wrapfix.js</a></li>
           </ul>
         </section>
 
