Align Site Navigation left on large screen

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,7 +1,7 @@
 // Logo
 .logo {
   color: $color-dark-light;
-  flex-grow: 1;
+  flex: auto;
   font-size: rem($ratio-text-logo);
   font-weight: bolder;
   height: $height-logo;
@@ -19,6 +19,7 @@
   }
 
   @media (min-width: $breakpoint-full) {
+    flex: initial;
     width: $width-supplement;
   }
 }
