--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -36,4 +36,13 @@
       margin-left: $width-gap;
     }
   }
+
+  @media (min-width: $breakpoint-content) {
+    margin-left: $width-gap;
+
+    li {
+      margin-left: 0;
+      margin-right: $width-gap;
+    }
+  }
 }
