--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,7 +34,9 @@
 @import "global-header";
 @import "global-header-at-home";
 @import "global-header/logo";
+@import "global-header/logo-at-home";
 @import "global-header/site-navigation";
+@import "global-header/site-navigation-at-home";
 
 
 // Content
