Don’t outdent Fill

--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -1,10 +1,5 @@
 // Fill
 .fill {
-  $m: (- $width-gap-small);
-
-  margin-left: $m;
-  margin-right: $m;
-
   img,
   video,
   canvas {
@@ -12,16 +7,12 @@
     width: 100%;
   }
 
-  figcaption {
-    margin-left: (- $m);
-  }
-
   @media (min-width: $breakpoint-full) {
-    margin-left: (- ($width-gap-small + $width-supplement + $width-gap));
+    margin-left: (- ($width-supplement + $width-gap));
 
     figcaption {
       bottom: auto;
-      left: (- $width-gap-small);
+      left: 0;
       margin-top: $margin;
       text-align: left;
     }
