Fix query parameters

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -7,7 +7,7 @@
   display: flex;
   margin-top: $margin-small;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-content) {
     margin-top: $margin;
   }
 
