fixup! Don’t enlarge First Heading

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -21,9 +21,9 @@ body {
 h1 {
   @extend %indistinguishable-link;
 
-  font-size: rem($ratio-text-huge);
+  font-size: rem($ratio-text-h1);
   font-weight: normal;
-  line-height: $line-height-tiny;
+  line-height: $line-height-h1;
   margin: $margin-top-h1 0 $margin;
 }
 
