--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -27,6 +27,8 @@ $line-height-large: ($line-height * 1.2);
 $line-height-root: $line-height-small;
 $line-height-root-content: $line-height;
 
+$ratio-text-h1: $ratio-text-huge;
+$line-height-h1: $line-height-tiny;
 
 // Global Header
 $ratio-text-logo: $ratio-text;
