--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -14,11 +14,7 @@
     float: right;
     margin-left: $width-gap;
     position: relative;
-    top: (($height-first-heading-content - $height-section-footer-content) / 2);
+    top: (($height-h1 - $height-section-footer-content) / 2);
     width: auto;
-  }
-
-  @media (min-width: $breakpoint-full) {
-    top: (($height-first-heading-full - $height-section-footer-content) / 2);
   }
 }
