--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -58,6 +58,7 @@ $width-protrusion-full: $width-supplement;
 
 
 // Core
+$height-h1: rem($line-height-h1 * $ratio-text-h1);
 $margin-top-h1: $margin-gargantuan;
 
 $padding-left-blockquote: $width-gap;
@@ -76,9 +77,6 @@ $height-logo: rem($ratio-text-logo);
 // Content
 $height-section-footer: rem($line-height-root * $ratio-text-section-footer);
 $height-section-footer-content: rem($line-height-root-content * $ratio-text-section-footer);
-
-$height-first-heading-content: rem($line-height-first-heading * $ratio-text-first-heading-content);
-$height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-heading-full);
 
 
 // Subcontent
