Link First Heading and Global Header top white spaces

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -5,14 +5,14 @@
   @extend %positioning-root;
 
   display: flex;
-  margin-top: $margin-small;
+  margin-top: $margin-top-global-header;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: $margin;
+    margin-top: $margin-top-global-header-content;
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-large;
+    margin-top: $margin-top-global-header-full;
     max-width: $width-full;
     padding-left: $width-gap-small;
   }
