--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -43,6 +43,7 @@
 @import "content";
 @import "content/section";
 @import "content/section-footer";
+@import "content/first-heading";
 
 
 // Subcontent
