--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -71,6 +71,10 @@ $width-border-table: $width-border-small;
 
 
 // Global Header
+$margin-top-global-header: $margin-small;
+$margin-top-global-header-content: $margin;
+$margin-top-global-header-full: $margin-large;
+
 $height-logo: rem($ratio-text-logo);
 
 
