Align Section Footer left on large screen

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -17,4 +17,10 @@
     top: (($height-h1 - $height-section-footer-content) / 2);
     width: auto;
   }
+
+  @media (min-width: $breakpoint-content) {
+    left: (- ($width-supplement + $width-gap));
+    margin-left: 0;
+    position: absolute;
+  }
 }
