--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -30,7 +30,7 @@
 <!-- blosxom story -->
       <article class="section">
         <footer class="section-footer">
-          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@num.strip_leading_zeros output="Yes">$da</@num.strip_leading_zeros>, $yr</time>
+          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo/$da</time>
             · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
@@ -53,6 +53,6 @@
 
 <!-- blosxom categories_story -->
 <li>
-  <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@num.strip_leading_zeros output="Yes">$da</@num.strip_leading_zeros></time></div>
+  <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo/$da</time></div>
   <a class="title" href="$url$path/$fn.$default_flavour">$title</a>
 </li>
