--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -4,17 +4,17 @@
 
   <nav class="site-navigation{{#home}} at-home{{/home}}">
     <ul>
-      {{#documents}}<li><mark>Documents</mark></li>{{/documents}}
-      {{^documents}}<li><a href="/documents/">Documents</a></li>{{/documents}}
+      {{#documents}}<li><mark>書き物</mark></li>{{/documents}}
+      {{^documents}}<li><a href="/documents/">書き物</a></li>{{/documents}}
 
       {{#weblog}}
-        {{#weblog_child}}<li><a href="/blog/"><mark>Weblog</mark></a></li>{{/weblog_child}}
-        {{^weblog_child}}<li><mark>Weblog</mark></li>{{/weblog_child}}
+        {{#weblog_child}}<li><a href="/blog/"><mark>ウェブログ</mark></a></li>{{/weblog_child}}
+        {{^weblog_child}}<li><mark>ウェブログ</mark></li>{{/weblog_child}}
       {{/weblog}}
 
-      {{^weblog}}<li><a href="/blog/">Weblog</a></li>{{/weblog}}
-      {{#about}}<li><mark>About</mark></li>{{/about}}
-      {{^about}}<li><a href="/about/">About</a></li>{{/about}}
+      {{^weblog}}<li><a href="/blog/">ウェブログ</a></li>{{/weblog}}
+      {{#about}}<li><mark>いろいろ</mark></li>{{/about}}
+      {{^about}}<li><a href="/about/">いろいろ</a></li>{{/about}}
     </ul>
   </nav>
 </header>
