--- a/src/css/class/_decorative-border.scss
+++ b/src/css/class/_decorative-border.scss
@@ -8,6 +8,7 @@
     border-top: $width-border-large solid $color-light-dark;
     content: "";
     display: block;
+    max-width: 50%;
     position: absolute;
     top: (- $margin-tiny);
     width: ($width-supplement / pow($ratio, 3));
