Don’t show category

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -33,8 +33,7 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-            · <span class="tag"><a href="./{{cat}}/">{{category}}</a></span></div>
+          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
           <a class="title" href="{{link}}">{{{title}}}</a>
         </li>
 
