--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -11,8 +11,7 @@
           <section id="latest-article" class="section topic">
             <a href="{{link}}" rel="prerender">
               <footer class="section-footer">
-                <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-                  · <span class="tag">{{category}}</span></p>
+                <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></p>
               </footer>
 
               <h1 class="first-heading at-home">{{title}}</h1>
@@ -32,8 +31,7 @@
           <ol class="posts">
             {{#item}}
               <li>
-                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-                  · <span class="tag"><a href="./blog/{{cat}}/">{{category}}</a></span></div>
+                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
                 <a class="title" href="{{link}}">{{{title}}}</a>
               </li>
             {{/item}}
