--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -1,9 +1,20 @@
 // Byline
 .byline {
-  @extend %decorative-border;
+  @extend %positioning-root;
 
   color: $color-dark-light;
   flex-grow: 1;
+  margin-top: $margin;
+
+  &::before {
+    border-top: $width-border-large solid $color-light-dark;
+    content: "";
+    display: block;
+    max-width: 50%;
+    position: absolute;
+    top: (- $margin-tiny);
+    width: ($width-supplement / pow($ratio, 3));
+  }
 
   @media (min-width: $breakpoint-full) {
     margin-left: (- ($width-supplement + $width-gap));
