Don’t hang figcaption

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -133,35 +133,19 @@ figure {
 }
 
 figcaption {
-  @extend %protrusion;
-
   color: $color-dark-light;
+  margin-top: $margin-minimal;
 
   blockquote + & {
     border-left: $width-border-blockquote solid $color-border-blockquote;
     margin-top: 0;
     padding-left: $padding-left-blockquote;
     padding-top: $margin;
-
-    &::before {
-      content: initial;
-    }
   }
 
   @media (min-width: $breakpoint-content) {
     blockquote + & {
       margin-left: $margin-left-blockquote-content;
-    }
-  }
-
-  @media (min-width: $breakpoint-full) {
-    bottom: 0;
-
-    blockquote + & {
-      margin-right: 0;
-      position: static;
-      text-align: left;
-      width: auto;
     }
   }
 }
