--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -14,7 +14,7 @@
       bottom: auto;
       left: 0;
       margin-top: $margin;
-      text-align: left;
+      position: absolute;
     }
   }
 }
