Draw border on figcaption

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -133,11 +133,14 @@ figure {
 }
 
 figcaption {
+  border-left: $width-border-large solid $color-dark-light;
   color: $color-dark-light;
-  margin-top: $margin-minimal;
+  margin-top: $margin-tiny;
+  padding-left: $padding;
 
   blockquote + & {
-    border-left: $width-border-blockquote solid $color-border-blockquote;
+    border-left-color: $color-border-blockquote;
+    border-left-width: $width-border-blockquote;
     margin-top: 0;
     padding-left: $padding-left-blockquote;
     padding-top: $margin;
