Forget weblog category index pages

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -9,29 +9,13 @@
     {{> global-header}}
 
     <main class="content">
-      <?$categories::is_category_page eq="1">
-        <section class="section">
-          <h1 class="first-heading">{{short_title}}</h1>
-
-          <p>以下は2002年より始まったこのウェブログの$categories::titleに関する記事だけの時系列順のリストになります。</p>
-      </?>
 
 <!-- blosxom date -->
-      <?$categories::is_category_page eq="1">
-          </ol>
-        </section>
-
-        <section class="section">
-          <h1 class="hanged"><time>$yr</time></h1>
-
-          <ol class="posts">
-      </?>
 
 <!-- blosxom story -->
       <article class="section">
         <footer class="section-footer">
-          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo/$da</time>
-            · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
+          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo/$da</time></p>
         </footer>
 
         <h1 class="first-heading">$title</h1>
@@ -40,19 +24,9 @@
       </article>
 
 <!-- blosxom foot -->
-      <?$categories::is_category_page eq="1">
-          </ol>
-        </section>
-      </?>
     </main>
 
     {{> site-search}}
     {{> global-footer}}
   </body>
 </html>
-
-<!-- blosxom categories_story -->
-<li>
-  <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo/$da</time></div>
-  <a class="title" href="$url$path/$fn.$default_flavour">$title</a>
-</li>
