Enlarge text based on viewport size
Just a test.

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -2,11 +2,16 @@
 :root {
   font-family: $font-stack-sans-serif;
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
-  font-size: percentage($ratio-text);
+  font-size: percentage($ratio-text-root);
   line-height: $line-height-root;
 
   @media (min-width: $breakpoint-content) {
+    font-size: percentage($ratio-text-root-content);
     line-height: $line-height-root-content;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    font-size: percentage($ratio-text-root-full);
   }
 }
 
