--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -3,7 +3,7 @@ $ratio: 1.7;
 
 
 // Text Size
-$ratio-text-primary: 1;
+$ratio-text-primary: (16px / 16px);
 $ratio-text-secondary: (24px / 16px);
 $ratio-text: $ratio-text-primary;
 $ratio-text-minimal: ($ratio-text-secondary / pow($ratio, 2));
@@ -24,6 +24,9 @@ $line-height-large: ($line-height * 1.2);
 
 
 // Core
+$ratio-text-root: $ratio-text;
+$ratio-text-root-content: (18px / 16px);
+$ratio-text-root-full: (21px / 16px);
 $line-height-root: $line-height-small;
 $line-height-root-content: $line-height;
 
