--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -49,8 +49,8 @@ $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
 
 // Breakpoint
 $width-scrollbar: 2rem;
-$breakpoint-content: ($width-gap + $width-content-outer + $width-gap + $width-scrollbar);
-$breakpoint-full: ($width-gap + $width-full-outer + $width-gap + $width-scrollbar);
+$breakpoint-content: (($width-gap + $width-content-outer + $width-gap + $width-scrollbar) * $ratio-text-root-content / $ratio-text-root);
+$breakpoint-full: (($width-gap + $width-full-outer + $width-gap + $width-scrollbar) * $ratio-text-root-full / $ratio-text-root);
 
 
 // Placeholder Class
