Display date correctly

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -15,7 +15,7 @@
 <!-- blosxom story -->
       <article class="section">
         <footer class="section-footer">
-          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo/$da</time></p>
+          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo_num/$da</time></p>
         </footer>
 
         <h1 class="first-heading">$title</h1>
