Simplify line height

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -19,16 +19,13 @@ $ratio-text-maximal: ($ratio-text-secondary * pow($ratio, 2));
 // Line Height
 $line-height: $ratio;
 $line-height-tiny: ($line-height * .8);
-$line-height-small: ($line-height * .9);
-$line-height-large: ($line-height * 1.2);
 
 
 // Core
 $ratio-text-root: $ratio-text;
 $ratio-text-root-content: (18px / 16px);
 $ratio-text-root-full: (21px / 16px);
-$line-height-root: $line-height-small;
-$line-height-root-content: $line-height;
+$line-height-root: $line-height;
 
 $ratio-text-h1: $ratio-text-huge;
 $line-height-h1: $line-height-tiny;
