Spilt Section Heading into module

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -41,6 +41,7 @@
 // Content
 @import "content";
 @import "content/section";
+@import "content/section-heading";
 @import "content/section-footer";
 
 
