Decrease Section Heading bottom white spaces

--- a/src/css/content/_section-heading.scss
+++ b/src/css/content/_section-heading.scss
@@ -3,5 +3,6 @@
   color: $color-dark-light;
   font-size: rem($ratio-text-large);
   font-weight: bolder;
+  margin-bottom: $margin-minimal;
   margin-top: $margin-huge;
 }
