Rename to Subheading

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -41,8 +41,8 @@
 // Content
 @import "content";
 @import "content/section";
-@import "content/section-heading";
 @import "content/section-footer";
+@import "content/subheading";
 
 
 // Subcontent
