Use class for Subheading

--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,5 +1,5 @@
 // Subheading
-.section section h1 {
+.subheading {
   color: $color-dark-light;
   font-size: rem($ratio-text-large);
   font-weight: bolder;
