--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -3,8 +3,8 @@ $ratio: 1.7;
 
 
 // Text Size
-$ratio-text-primary: (16px / 16px);
-$ratio-text-secondary: (24px / 16px);
+$ratio-text-primary: 1;
+$ratio-text-secondary: 1.5;
 $ratio-text: $ratio-text-primary;
 $ratio-text-minimal: ($ratio-text-secondary / pow($ratio, 2));
 $ratio-text-tiny: ($ratio-text-primary / $ratio);
@@ -23,8 +23,8 @@ $line-height-tiny: ($line-height * .8);
 
 // Core
 $ratio-text-root: $ratio-text;
-$ratio-text-root-content: (18px / 16px);
-$ratio-text-root-full: (21px / 16px);
+$ratio-text-root-content: (18px / 16px * $ratio-text);
+$ratio-text-root-full: (20px / 16px * $ratio-text);
 $line-height-root: $line-height;
 
 $ratio-text-h1: $ratio-text-huge;
