Test root font size

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -23,8 +23,8 @@ $line-height-tiny: ($line-height * .8);
 
 // Core
 $ratio-text-root: $ratio-text;
-$ratio-text-root-content: (18px / 16px * $ratio-text);
-$ratio-text-root-full: (20px / 16px * $ratio-text);
+$ratio-text-root-content: (1.1 * $ratio-text);
+$ratio-text-root-full: (1.2 * $ratio-text);
 $line-height-root: $line-height;
 
 $ratio-text-h1: $ratio-text-huge;
