Use 特集 for documents
書き物 looks like weblog.

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -4,8 +4,8 @@
 
   <nav class="site-navigation{{#home}} at-home{{/home}}">
     <ul>
-      {{#documents}}<li><mark>書き物</mark></li>{{/documents}}
-      {{^documents}}<li><a href="/documents/">書き物</a></li>{{/documents}}
+      {{#documents}}<li><mark>特集</mark></li>{{/documents}}
+      {{^documents}}<li><a href="/documents/">特集</a></li>{{/documents}}
 
       {{#weblog}}
         {{#weblog_child}}<li><a href="/blog/"><mark>ウェブログ</mark></a></li>{{/weblog_child}}
