Lighten Section Footer

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -2,10 +2,9 @@
 .section-footer {
   @extend %indistinguishable-link;
 
-  color: $color-dark-light;
+  color: $color-light-dark;
   float: left;
   font-size: rem($ratio-text-section-footer);
-  font-weight: bolder;
   width: 100%;
 
   p {
