--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -35,7 +35,7 @@ $ratio-text-logo: $ratio-text;
 
 
 // Content
-$ratio-text-section-footer: $ratio-text-small;
+$ratio-text-section-footer: $ratio-text;
 
 $ratio-text-first-heading-content: $ratio-text-huge;
 $ratio-text-first-heading-full: $ratio-text-gargantuan;
