Control Global Header font size at once

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -5,10 +5,13 @@
   @extend %positioning-root;
 
   display: flex;
+  font-size: rem($ratio-text-global-header);
+  line-height: 1;
   margin-top: $margin-top-global-header;
 
   @media (min-width: $breakpoint-content) {
     margin-top: $margin-top-global-header-content;
+    font-size: rem($ratio-text-global-header-content);
   }
 
   @media (min-width: $breakpoint-full) {
