--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -2,10 +2,9 @@
 .logo {
   color: $color-dark-light;
   flex: auto;
-  font-size: rem($ratio-text-logo);
+  font-size: inherit;
   font-weight: bolder;
-  height: $height-logo;
-  line-height: 1;
+  line-height: inherit;
   margin-bottom: 0;
   margin-top: 0;
   text-transform: uppercase;
