--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -31,7 +31,8 @@ $ratio-text-h1: $ratio-text-huge;
 $line-height-h1: $line-height-tiny;
 
 // Global Header
-$ratio-text-logo: $ratio-text;
+$ratio-text-global-header: $ratio-text-small;
+$ratio-text-global-header-content: $ratio-text;
 
 
 // Content
