--- a/src/css/_global-header-at-home.scss
+++ b/src/css/_global-header-at-home.scss
@@ -1,7 +1,14 @@
 // Global Header at Home
 .global-header.at-home {
-  $m: calc((100vh - #{$height-logo}) / 2);
+  $m: calc((100vh - #{rem($ratio-text-global-header)}) / 2);
 
   margin-bottom: $m;
   margin-top: $m;
+
+  @media (min-width: $breakpoint-content) {
+    $m: calc((100vh - #{rem($ratio-text-global-header-content)}) / 2);
+
+    margin-bottom: $m;
+    margin-top: $m;
+  }
 }
