Rank up Global Header top white spaces

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -71,9 +71,9 @@ $width-border-table: $width-border-small;
 
 
 // Global Header
-$margin-top-global-header: $margin-small;
-$margin-top-global-header-content: $margin;
-$margin-top-global-header-full: $margin-large;
+$margin-top-global-header: $margin;
+$margin-top-global-header-content: $margin-large;
+$margin-top-global-header-full: $margin-huge;
 
 
 // Content
