Reduce First Heading top white spaces

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -42,6 +42,7 @@
 @import "content";
 @import "content/section";
 @import "content/section-footer";
+@import "content/first-heading";
 @import "content/subheading";
 
 
