Lighten figcaption border

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -136,7 +136,7 @@ figure {
 }
 
 figcaption {
-  border-left: $width-border-large solid $color-dark-light;
+  border-left: $width-border solid $color-light-dark;
   color: $color-dark-light;
   margin-top: $margin-tiny;
   padding-left: $padding;
