Hang figcaption on large screen (revert)

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -136,14 +136,15 @@ figure {
 }
 
 figcaption {
-  border-left: $width-border solid $color-light-dark;
+  @extend %protrusion;
+
   color: $color-dark-light;
+  font-size: rem($ratio-text-small);
   margin-top: $margin-tiny;
-  padding-left: $padding;
 
   blockquote + & {
-    border-left-color: $color-border-blockquote;
-    border-left-width: $width-border-blockquote;
+    border-left: $width-border-blockquote solid $color-border-blockquote;
+    font-size: inherit;
     margin-top: 0;
     padding-left: $padding-left-blockquote;
     padding-top: $margin;
@@ -152,6 +153,17 @@ figcaption {
   @media (min-width: $breakpoint-content) {
     blockquote + & {
       margin-left: $margin-left-blockquote-content;
+    }
+  }
+
+  @media (min-width: $breakpoint-full) {
+    bottom: 0;
+    text-align: right;
+
+    blockquote + & {
+      position: static;
+      text-align: left;
+      width: auto;
     }
   }
 }
