Use serif for Logo

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -2,12 +2,12 @@
 .logo {
   color: $color-dark-light;
   flex: auto;
+  font-family: $font-stack-serif;
   font-size: inherit;
   font-weight: bolder;
   line-height: inherit;
   margin-bottom: 0;
   margin-top: 0;
-  text-transform: uppercase;
 
   a {
     color: inherit;
