--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -2,6 +2,10 @@
 $font-stack-sans-serif-local: -apple-system, "Segoe UI", sans-serif;
 $font-stack-sans-serif: $font-stack-sans-serif-local;
 
+// Serif
+$font-stack-serif-local: "Hoefler Text", "Constantia", serif;
+$font-stack-serif: $font-stack-serif-local;
+
 // Monospace
 $font-stack-monospace-local: "Menlo", "Consolas", monospace;
 $font-stack-monospace: $font-stack-monospace-local;
