Capitalize all Global Header texts

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -8,6 +8,7 @@
   font-size: rem($ratio-text-global-header);
   line-height: 1;
   margin-top: $margin-top-global-header;
+  text-transform: uppercase;
 
   @media (min-width: $breakpoint-content) {
     font-size: rem($ratio-text-global-header-content);
