Check search strings by client-side form validation

--- a/src/html/partial/site-search.mustache
+++ b/src/html/partial/site-search.mustache
@@ -1,7 +1,7 @@
 <aside class="subcontent">
   <form class="site-search" action="https://duckduckgo.com/" role="search">
     <input name="sites" type="hidden" value="hail2u.net">
-    <input class="query" name="q" placeholder="例: Blosxom" size="32" type="search">
+    <input class="query" name="q" pattern=".+" placeholder="例: Blosxom" size="32" title="検索したい文字を1文字以上入力してください" type="search">
     <input class="button" type="submit" value="Search">
   </form>
 </aside>
