List articles and documents on top page

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,28 +7,15 @@
 
     <main class="content">
       {{#articles}}
-        {{#first}}
-          <section id="latest-article" class="section topic">
-            <a href="{{link}}" rel="prerender">
-              <footer class="section-footer">
-                <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></p>
-              </footer>
-
-              <h1 class="first-heading at-home">{{title}}</h1>
-
-              {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
-
-              <p>{{description}} <span class="more">→</span></p>
-            </a>
-
-            <hr>
-          </section>
-        {{/first}}
-
-        <section id="recent-articles" class="section">
-          <h1 class="hanged">最近の記事</h1>
-
+        <div id="recent-articles" class="section">
           <ol class="posts">
+            {{#first}}
+                  <li>
+                    <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+                    <a class="title" href="{{link}}">{{{title}}}</a>
+                  </li>
+            {{/first}}
+
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
@@ -40,7 +27,7 @@
           <nav>
             <p><a href="./blog/">→ 過去ログの閲覧</a></p>
           </nav>
-        </section>
+        </div>
       {{/articles}}
     </main>
 
