Hide Weblog feed URL

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -16,11 +16,7 @@
         <section>
           <h1 class="subheading">購読</h1>
 
-          <p>このウェブサイトの更新情報は、以下の2種類のRSSフィードで配信しています。</p>
-
-          <ul>
-            <li><a href="/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
-            <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
+          <p>このウェブサイトの更新情報は、<a href="/feed" rel="alternate" type="application/rss+xml">RSSフィード</a>で配信しています。このフィードにはウェブサイト全体の更新情報だけでなく、ウェブログの記事も含まれます。</li>
           </ul>
         </section>
 
