--- a/src/css/widget/_drop.scss
+++ b/src/css/widget/_drop.scss
@@ -1,14 +1,10 @@
 // Drop
 .drop {
-  img {
-    min-width: $width-supplement;
-  }
+  @extend %protrusion;
 
   @media (min-width: $breakpoint-full) {
-    float: left;
-    margin-bottom: $margin-minimal;
-    margin-left: (- ($width-supplement + $width-gap));
-    margin-right: $width-gap-small;
-    max-width: ($width-supplement + $width-gap + $width-content / 2);
+    img {
+      width: 100%;
+    }
   }
 }
