--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -58,10 +58,10 @@
 
 
 // Widget
-@import "widget/drop";
 @import "widget/fill";
 @import "widget/flat";
 @import "widget/float";
+@import "widget/hang";
 @import "widget/posts";
 @import "widget/seealso";
 @import "widget/sidenote";
